--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
@@ -57,7 +58,7 @@
     "url-loader": "^0.5.8",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-dev-server": "^3.10.1",
     "webpack-merge": "^4.1.0"
   },
