--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "semver": "^5.3.0",
+    "serialize-javascript": "^2.1.2",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
     "vue-style-loader": "^3.0.1",
