--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "style-loader": "^1.1.2",
     "vue": "^2.6.0",
     "vue-loader": "^15.8.3",
+    "vue-pdf": "^4.0.7",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.2",
     "webpack": "^4.41.5",
