--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.conf.js",
     "build": "cross-env NODE_ENV=production webpack --config build/webpack.prod.conf.js",
-    "start": "npm run dev"
+    "s": "npm run dev"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "@tweenjs/tween.js": "^18.5.0",
     "axios": "^0.19.0",
-    "babel-polyfill": "^6.26.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "clean-webpack-plugin": "^3.0.0",
     "css": "^2.2.4",
     "echarts": "^4.6.0",
@@ -32,19 +33,27 @@
     "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-syntax-jsx": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-loader": "^8.0.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^6.0.3",
     "css-loader": "^0.28.0",
     "element-ui": "^2.13.0",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "js-yaml": "^3.13.1",
